--- a/voiceCloneLoginExtension/manifest.json
+++ b/voiceCloneLoginExtension/manifest.json
@@ -1,13 +1,10 @@
 {
   "manifest_version": 3,
-  "name": "Bloqueador AVMakers",
+  "name": "Login Automático VoiceClone",
   "version": "1.0",
-  "description": "Faz Login automático no VoiceClone.",
-  "permissions": [
-    "declarativeNetRequest"
-  ],
+  "description": "Faz login automático no VoiceClone.",
   "host_permissions": [
-    "https://voiceclone.dankicode.ai/login*"
+    "https://voiceclone.dankicode.ai/*"
   ],
   "content_scripts": [
     {
@@ -15,14 +12,5 @@
       "js": ["content.js"],
       "run_at": "document_start"
     }
-  ],
-  "declarative_net_request": {
-    "rule_resources": [
-      {
-        "id": "ruleset_1",
-        "enabled": true,
-        "path": "rules.json"
-      }
-    ]
-  }
+  ]
 }
